fix reviews secion |  flex direction was row on mobile layout

--- a/src/output.css
+++ b/src/output.css
@@ -668,6 +668,10 @@ img {
   max-width: 24rem;
 }
 
+.flex-col {
+  flex-direction: column;
+}
+
 .justify-center {
   justify-content: center;
 }
